Revert "Fix subscrube button alignment issue"
This reverts commit 681def179f5161a723082eeac86518efb5866471.

--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,6 @@ footer {
   overflow: auto;
 }
 
-.subscribe {
-  margin: 0 auto;
-}
-
 
 footer {
   background-color: white;
